# UXA-90-Senior-Project

./: SpeechToText.py  TextToSpeech.py  main.cpp  uxa_menu_control.cpp
Custom Code/: readme
Custom Code/Py_client/: client.py
Custom Code/uxa_menu_control/: CMakeLists.txt  package.xml
Custom Code/uxa_menu_control/src/: uxa_menu_control.cpp
Custom Code/uxa_server_cpp/: CMakeLists.txt  package.xml
Custom Code/uxa_server_cpp/src/: uxa_server.cpp
Source Code/: readme
Source Code/uxa_balltracking/src/: main.cpp
Source Code/uxa_dashboard/: CMakeLists.txt  UXA_DASHBOARD.files  package.xml
Source Code/uxa_dashboard/include/uxa_dashboard/: main_window.hpp  moc_qnode.cxx  qnode.hpp
Source Code/uxa_dashboard/src/: main_window.cpp  qnode.cpp
Source Code/uxa_dashboard/ui/: main_window.ui
Source Code/uxa_sam_driver/src/: uxa_sam_driver.cpp
Source Code/uxa_serial/: CMakeLists.txt
Source Code/uxa_serial/include/: uxa_serial.h
Source Code/uxa_uic_driver/: CMakeLists.txt
Source Code/uxa_uic_driver/src/: CMakeCache.txt
Source Code/uxa_uic_driver/src/catkin_generated/: generate_cached_setup.py  (+1 more)
UXA-90-Documentation/: readme
UXA-90-Documentation/UXA-90_Motion/: M01_BASIC.rbm  M02_KICK.rbm  M03_TURN_LEFT.rbm  M04_WF_SHORT.rbm  M05_TURN_RIGHT.rbm  M06_SIDE_LEFT3.rbm  M07_SIDE_RIGHT3.rbm  M08_WF_4STEP.rbm  M09_BASIC.rbm  M10_WF_6STEP.rbm  M11_INTRODUCTION.rbm  M12_GANGNAM.rbm  New_Motion.prj  userLib.lib
UXA-90-Documentation/UXA-90_Software_Firmware/Firmware/: FW_HEAD_v0.2.hex  FW_UIC_SUB_SW_v0.4.hex  Test_SubCTRL.hex  UIC_MAIN_CTRL_v1.0.0D.hex
(+10 files in other folders)
